Fixing spacing error in XSL, fixing css error (which we really should be checking for)

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -429,7 +429,7 @@ div.result:focus > a{
 }
 
 
-#metadata> > div{
+#metadata> div{
     max-width:14rem;
 }
 
